--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,11 +85,10 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm install oauth-sign@^0.9.0
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
             npm audit fix --audit-level=critical --force
-            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” agai
-            npm audit fix --force
+            npm audit fix --force --audit-level=critical --force
             npm audit --audit-level=critical
       - save_cache:
           paths: [frontend/node_modules]
@@ -107,11 +106,11 @@ jobs:
           command: |
             cd backend
             npm install
-            npm install oauth-sign@^0.9.0
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
             npm audit fix --audit-level=critical --force
             # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again
-            npm audit fix --force
+            npm audit fix --force --audit-level=critical --force
             npm audit --audit-level=critical
       - save_cache:
           paths: [backend/node_modules]
