--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,7 +148,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="{CIRCLE_WORKFLOW_ID:0:7}"  
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
               --tags project=udapeople
       - run:
           name: Add back-end ip to ansible inventory
@@ -156,18 +156,14 @@ jobs:
             aws ec2 describe-instances \
             --filter "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text >> ~/cdond-c3-project3-aa/.circleci/ansible/inventory.txt
-            cat ~/cdond-c3-project3-aa/.circleci/ansible/inventory.txt
+            --output text >> ~/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - cdond-c3-project3-aa/.circleci/ansible/inventory.txt
+            - inventory.txt
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}      
 
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   project3Workflow:
     jobs:
