--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
 jobs:
   build-frontend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
@@ -38,7 +38,7 @@ jobs:
 
   build-backend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
@@ -55,7 +55,7 @@ jobs:
 
   test-frontend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
@@ -72,7 +72,7 @@ jobs:
 
   test-backend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
@@ -89,7 +89,7 @@ jobs:
 
   scan-frontend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
@@ -108,7 +108,7 @@ jobs:
 
   scan-backend:
     docker:
-      - image: circleci/node:13.8.0
+      image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
