--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
 
   scan-backend:
     docker:
-      image: cimg/node:12.16
+      - image: cimg/node:12.16
     steps:
       - checkout
       - restore_cache:
