--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,13 +156,35 @@ jobs:
             aws ec2 describe-instances \
             --filter "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text >> ~/inventory.txt
+            --output text >> ~/.cicleci/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - inventory.txt
+            - .circleci/inventory.txt
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}      
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["07:c7:b4:df:33:69:30:b2:8c:76:23:c0:3a:21:21:08"]
+      - attach_workspace:
+            at: ~/
+      - run:
+          name: Install dependencies
+          command: | 
+            apk add --update  ansible
+            pip install awscli
+      - run:
+          name: Configure servers
+          command: |
+              cd .circleci/ansible
+              ansible-playbook -i inventory.txt  configure-server.yml
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 workflows:
   project3Workflow:
