--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,11 +156,11 @@ jobs:
             aws ec2 describe-instances \
             --filter "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text >> ~/.cicleci/inventory.txt
+            --output text >> ~/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - .circleci/inventory.txt
+            - inventory.txt
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       
