--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,6 +218,8 @@ jobs:
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
+            npm audit fix
+            cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
@@ -295,6 +297,8 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert_migration:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  
       
 workflows:
   project3Workflow:
