--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,6 @@ jobs:
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
-            npm audit fix
             cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
@@ -228,7 +227,7 @@ jobs:
               curl https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       - destroy-environment:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-frontend:
     docker:
@@ -240,7 +239,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-              apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - run:
           name: Get backend url
           command: |
@@ -297,6 +296,31 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert_migration:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  smoke-test:
+      docker:
+        - image: python:3.10-alpine3.16
+      steps:
+        - checkout
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update ansible
+              pip install awscli
+              apk add --update --no-cache tar gzip nodejs npm curl
+        - run:
+            name: Get backend url
+            command: |
+              # your code here
+        - run:
+            name: Backend smoke test.
+            command: |
+              # your code here
+        - run:
+            name: Frontend smoke test.
+            command: |
+              # your code here
+        # Here's where you will add some code to rollback on failure  
 
   
       
