--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,21 +305,34 @@ jobs:
             command: |
               apk add --update ansible
               pip install awscli
-              apk add --update --no-cache tar gzip nodejs npm curl
-        - run:
-            name: Get backend url
-            command: |
-              # your code here
+              apk add --update --no-cache tar gzip nodejs npm curl          
         - run:
             name: Backend smoke test.
             command: |
-              # your code here
+              export API_URL="http://${BACKEND_IP}:3030"
+              echo "${API_URL}"
+              if curl "${API_URL}/api/status" | grep "ok"
+              then
+                  return 0
+              else
+                  return 1
+              fi
         - run:
             name: Frontend smoke test.
             command: |
-              # your code here
-        # Here's where you will add some code to rollback on failure  
-
+              URL="http://udapeople-aj33-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+              echo ${URL} 
+              if curl -s ${URL} | grep "Welcome"
+              then
+                  # Change this to 0 after the job fails
+                return 1
+              else
+                return 1
+              fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert_migration:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
       
 workflows:
@@ -346,3 +359,5 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
