--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,7 +193,7 @@ jobs:
           name: Install dependencies
           command: | 
             apk add --update  ansible
-            pip install awscli
+            pip install aws-cli
       - run:
           name: Configure servers
           command: |
@@ -215,7 +215,6 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
@@ -277,7 +276,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
-            pip install awscli
+            pip install aws-cli
             apk add --update --no-cache tar gzip nodejs npm curl
       - run:
           name: Deploy backend
