--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,9 +215,10 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
-          command: |
+          command:  |
             if grep -q "has been executed successfully." ~project/backend/migrations_dump.txt
             then 
               echo "DB migration was successful"
