--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: "configuration play." 
-  hosts: web
+- name: "configuration playbook." 
+  hosts: all
   user: ubuntu
   become: true
   become_method: sudo
@@ -13,8 +13,8 @@
     - ansible_stdout_callback: yaml
 
   #pre_tasks:
-   # - name: "wait 600 seconds for target connection to become reachable/usable."
-      # Your code here
+    #- name: "wait 600 seconds for target connection to become reachable/usable."
+    #- command:  # Your code here
 
     - name: "install python for Ansible."
       apt:
