--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: "configuration play." 
-  hosts: web
+- name: "Deploy backend playbook." 
+  hosts: all
   user: ubuntu
   gather_facts: false
   vars:
