--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,6 +207,8 @@ jobs:
       - image: cimg/node:12.16
     steps:
       - checkout
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
@@ -215,7 +217,6 @@ jobs:
             npm audit fix --force
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
-
       - run:
           name: Send migration results to kvdb.io
           command:  |
