--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,29 +1,29 @@
 ---
 - name: "update apt packages."
-  become: true
+  become: yes
   apt:
     update_cache: yes
 
 - name: "upgrade packages"
-  become: true
+  become: yes
   apt:
     upgrade: yes
 
 
 - name: remove dependencies that are no longer required
-  become: true
+  become: yes
   apt:
     autoremove: yes
 
 - name: "install dependencies."
-  become: true
+  become: yes
   apt:
     name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
 
 - name: "install pm2"
-  become: true
+  become: yes
   npm:
     name: pm2
     global: yes
@@ -31,13 +31,13 @@
     state: present
 
 - name: Extract files 
-  become: true
+  become: yes
   unarchive:
     src: files/artifact.tar.gz
     dest: .
 
 - name: Executing node
-  become: true
+  become: yes
   shell: |
     pm2 stop all
     pm2 start npm -- start
