--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,8 +192,10 @@ jobs:
       - run:
           name: Install dependencies
           command: | 
-            apk add --update  ansible
-            pip install awscli
+            sudo apt-get update && sudo apt-get install -yy less
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
       - run:
           name: Configure servers
           command: |
@@ -214,7 +216,6 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
