--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,10 +212,7 @@ jobs:
       - run:
           name: Install dependencies
           command: | 
-            sudo apt-get update && sudo apt-get install -yy less
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - run:
           name: Configure servers
           command: |
