--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,6 +212,7 @@ jobs:
       - run:
           name: Install dependencies
           command: | 
+            apk add --update  ansible
             apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - run:
           name: Configure servers
