--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,6 +359,37 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7
+
+  cloudfront-update:
+    docker:
+      - image: python:3.10-alpine3.16
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm curl
+            pip install awscli
+      - run:
+          name: Update cloudfront distribution
+          command: |
+                export WorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+                curl https://kvdb.io/RSyx7QjTE3q21Bx3BJkVcC/OldWrkflwId -d "$WorkflowID"
+                echo WorkflowID: "$WorkflowID"
+      - run:
+          name: Update cloudfront distribution
+          command: |
+              aws cloudformation deploy \
+                 --template-file .circleci/files/cloudfront.yml \
+                 --stack-name InitialStack \
+                 --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                 --tags project=udapeople
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert_migration:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
     
 workflows:
   project3Workflow:
@@ -388,3 +419,5 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
