--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,8 +388,8 @@ jobs:
                  --tags project=udapeople
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migration:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert_migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
     
 workflows:
   project3Workflow:
