--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -21,10 +21,7 @@
     state: latest
     update_cache: yes
 
-- name: "install pm2"
-  become: true
+- name: "Install PM2 Globally"
   npm:
     name: pm2
     global: yes
-    production: yes
-    state: present
