--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -11,7 +11,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 22, 3030, 443 and 9100.
+      GroupDescription: Allow port 22, 3030 and 9100.
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
@@ -20,10 +20,6 @@ Resources:
         - IpProtocol: tcp
           FromPort: 3030
           ToPort: 3030
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 9100
