--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
             sudo apt install -y python3 python3-pip
             python3 -m pip install --user ansible
 
-  revert_migrations:
+  revert_migration:
     description: Revert the last migration
     steps:
       - run:
